fix(tabs): fixed tabs scroll on mobile resolution, set hover for desktop

--- a/packages/ui-core/src/components/Tabs/Tabs.less
+++ b/packages/ui-core/src/components/Tabs/Tabs.less
@@ -187,10 +187,12 @@
     }
 
     &__tab-inner:not(&__tab-inner_current) {
-        &:hover {
-            color: var(--content);
+        @media @desktop {
+            &:hover {
+                color: var(--content);
 
-            fill: var(--content);
+                fill: var(--content);
+            }
         }
 
         &:active {
